--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,4 +44,4 @@ jobs:
     - name: Run test
       uses: ./.github/actions/ppml-spark-local-example-tests-on-gramine-action
       with:
-        image-tag: ${TAG}
+        image-tag: ${{env.TAG}}
