--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,14 @@
 name: Manually Build
 
 # Cancel previous runs in the PR when you push new commits
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+#   cancel-in-progress: true
   
-  
+env:
+  #Branch: ${{ github.event.inputs.branch }}
+  Branch: master
+
 on:
   push:
   workflow_dispatch:
@@ -44,6 +47,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: bigdl-ppml-gramine-base
       run: |
+        echo ${{ Branch }}
+        echo ${{ env.Branch }}
+        echo ${Branch}
+        echo $Branch
         echo ${{ github.workflow }}
         echo ${{ github.event.pull_request.number }}
         echo head_ref ${{ github.head_ref }}
