--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: octokit/request-action@v2.x
         id: get_latest_release
         with:
-          route: GET /repos/{owner}/{repo}/releases/latest
+          route: GET /repos/{owner}/{repo}/workflows/test.yml/runs
           owner: octokit
           repo: request-action
         env:
