--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -12,8 +12,8 @@ jobs:
         id: get_latest_release
         with:
           route: GET /repos/{owner}/{repo}/workflows/test.yml/runs
-          owner: octokit
-          repo: request-action
+          owner: liu-shaojun
+          repo: test-repo
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: "echo latest release: '${{ steps.get_latest_release.outputs.data }}'"
