--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -15,6 +15,7 @@ jobs:
           owner: liu-shaojun
           repo: test-repo
           workflow_id: test.yml
+          headers: '{ "X-GitHub-Api-Version": "2022-11-28" }'
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: "echo latest release: '${{ steps.get_latest_release.outputs.data }}'"
