--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -15,7 +15,7 @@ jobs:
           owner: liu-shaojun
           repo: test-repo
           workflow_id: test.yml
-          headers: '{ "X-GitHub-Api-Version": "2022-11-28" }'
+          headers: '{ "X-GitHub-Api-Version": "2022-11-28", "Authorization": "Bearer ${{ secrets.ACTIONS_PAT }}" }'
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: "echo latest release: '${{ steps.get_latest_release.outputs.data }}'"
