--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,6 @@ jobs:
     steps:
       - name: Retry the workflow
         run: |
-          response = $(curl -i -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" https://api.github.com/repos/liu-shaojun/test-repo/actions/workflows/test.yml/runs)
-          echo "response - ${{ toJSON(fromJSON($response)) }}"
+          echo 'GITHUB_SHA_SHORT=$(curl -i -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" https://api.github.com/repos/liu-shaojun/test-repo/actions/workflows/test.yml/runs)' >> $GITHUB_ENV
+          echo $GITHUB_SHA_SHORT
       
