--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -14,7 +14,7 @@ jobs:
           route: GET /repos/{owner}/{repo}/workflows/{workflow_id}/runs
           owner: liu-shaojun
           repo: test-repo
-          workflow_id: test.yml
+          workflow_id: 33225441
           headers: '{ "X-GitHub-Api-Version": "2022-11-28", "Authorization": "Bearer ${{ secrets.ACTIONS_PAT }}", "Accept": "application/vnd.github.v3+json" }'
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
