--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -11,10 +11,7 @@ jobs:
       - uses: octokit/request-action@v2.x
         id: get_latest_release
         with:
-          route: GET /repos/{owner}/{repo}/workflows/{workflow_id}/runs
-          owner: liu-shaojun
-          repo: test-repo
-          workflow_id: 33225441
+          route: GET /repos/liu-shaojun/test-repo/workflows/33225441/runs
           mediaType: | # The | is significant!
             format: json
         env:
