--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -12,8 +12,7 @@ jobs:
         id: get_latest_release
         with:
           route: GET /repos/liu-shaojun/test-repo/actions/workflows/33225441/runs
-          mediaType: | # The | is significant!
-            format: json
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
-      - run: "echo latest release: '${{ steps.get_latest_release.outputs.data }}'"
+      - run: "echo latest release: '${{ fromJson(steps.get_latest_release.outputs.data).workflow_runs }}'"
+      
