--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: octokit/request-action@v2.x
         id: get_latest_release
         with:
-          route: GET /repos/liu-shaojun/test-repo/actions/workflows/33225441/runs
+          route: GET /repos/liu-shaojun/test-repo/actions/workflows/retry.yml/runs
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: |
-          echo '${{ steps.get_latest_release.outputs.data }}' | jq .workflow_runs
+          echo '${{ steps.get_latest_release.outputs.data }}' | jq .workflow_runs[].event=
       
