--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -16,5 +16,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: |
-          echo '${{ steps.get_latest_release.outputs.data }}' | jq '.workflow_runs[].event == workflow_dispatch'
+          echo '${{ steps.get_latest_release.outputs.data }}' | | jq --arg foo $(date +%Y-%m-%d) '.workflow_runs[] | if .event == "workflow_dispatch" and .status == "completed" and .created_at[:10] == $foo then .id else "B" end '
       
