--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -24,6 +24,7 @@ jobs:
           echo $run_id
           echo "RUN_ID=$run_id" >> $GITHUB_ENV
       - uses: octokit/request-action@v2.x
+        if: ${{ env.RUN_ID }}
         with:
           route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
           run_id: ${{ env.RUN_ID }} 
