--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -13,20 +13,23 @@ jobs:
   logLatestRelease:
     runs-on: ubuntu-latest
     steps:
-      - uses: octokit/request-action@v2.x
-        id: get_latest_release
+      - uses: ./.github/actions/rerun_failed_workflow
         with:
-          route: GET /repos/intel-analytics/BigDL/actions/workflows/nano-nightly-test.yml/runs
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
-      - run: |
-          run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
-          echo $run_id
-          echo "RUN_ID=$run_id" >> $GITHUB_ENV
-      - uses: octokit/request-action@v2.x
-        if: ${{ env.RUN_ID }}
-        with:
-          route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
-          run_id: ${{ env.RUN_ID }} 
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+          workflow_name: 'nightly_test.yml'
+#       - uses: octokit/request-action@v2.x
+#         id: get_latest_release
+#         with:
+#           route: GET /repos/intel-analytics/BigDL/actions/workflows/nano-nightly-test.yml/runs
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+#       - run: |
+#           run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+#           echo $run_id
+#           echo "RUN_ID=$run_id" >> $GITHUB_ENV
+#       - uses: octokit/request-action@v2.x
+#         if: ${{ env.RUN_ID }}
+#         with:
+#           route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
+#           run_id: ${{ env.RUN_ID }} 
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
