--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -10,27 +10,69 @@ env:
   ACTIONS_STEP_DEBUG: true
 
 jobs:
-  logLatestRelease:
+  rerun_nightly_test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/rerun_failed_workflow
+#       - uses: actions/checkout@v3
+#       - uses: ./.github/actions/rerun_failed_workflow
+#         with:
+#           workflow_name: 'nightly_test.yml'
+      - uses: octokit/request-action@v2.x
+        id: get_latest_release
         with:
-          workflow_name: 'nightly_test.yml'
-#       - uses: octokit/request-action@v2.x
-#         id: get_latest_release
-#         with:
-#           route: GET /repos/intel-analytics/BigDL/actions/workflows/nano-nightly-test.yml/runs
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
-#       - run: |
-#           run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
-#           echo $run_id
-#           echo "RUN_ID=$run_id" >> $GITHUB_ENV
-#       - uses: octokit/request-action@v2.x
-#         if: ${{ env.RUN_ID }}
-#         with:
-#           route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
-#           run_id: ${{ env.RUN_ID }} 
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+          route: GET /repos/intel-analytics/BigDL/actions/workflows/nightly-test.yml/runs
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+      - run: |
+          run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+          echo $run_id
+          echo "RUN_ID=$run_id" >> $GITHUB_ENV
+      - uses: octokit/request-action@v2.x
+        if: ${{ env.RUN_ID }}
+        with:
+          route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
+          run_id: ${{ env.RUN_ID }} 
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+
+  rerun_nano_nightly_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: octokit/request-action@v2.x
+        id: get_latest_release
+        with:
+          route: GET /repos/intel-analytics/BigDL/actions/workflows/nano-nightly-test.yml/runs
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+      - run: |
+          run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+          echo $run_id
+          echo "RUN_ID=$run_id" >> $GITHUB_ENV
+      - uses: octokit/request-action@v2.x
+        if: ${{ env.RUN_ID }}
+        with:
+          route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
+          run_id: ${{ env.RUN_ID }} 
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+          
+  rerun_mac_nightly_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: octokit/request-action@v2.x
+        id: get_latest_release
+        with:
+          route: GET /repos/intel-analytics/BigDL/actions/workflows/mac-nightly-test.yml/runs
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+      - run: |
+          run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+          echo $run_id
+          echo "RUN_ID=$run_id" >> $GITHUB_ENV
+      - uses: octokit/request-action@v2.x
+        if: ${{ env.RUN_ID }}
+        with:
+          route: POST /repos/intel-analytics/BigDL/actions/runs/{run_id}/rerun-failed-jobs
+          run_id: ${{ env.RUN_ID }} 
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
