--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -66,6 +66,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: |
-          run_id=`echo '${{ steps.get_latest_release.outputs.data }}' | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] '`
+          run_id=`echo '${{ steps.get_latest_release.outputs.data }}'`
           echo $run_id
 
