--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -66,5 +66,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: |
-          echo '${{ steps.get_latest_release.outputs.data }}'
+          echo "${{ steps.get_latest_release.outputs.data }}"
 
