--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -66,5 +66,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: |
-          echo '${{ toJson(fromJson(steps.get_latest_release.outputs.data)) }}'
+          jq '{id: .workflow_runs[].id}' ${{ steps.get_latest_release.outputs.data }}
 
