--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -66,4 +66,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
       - run: |
-          echo '${{ steps.get_latest_release.outputs.data.total_count }}'
+          run_id=`echo '${{ steps.get_latest_release.outputs.data.total_count }}'`
+          echo $run_id
