--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -65,7 +65,6 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
           https://api.github.com/repos/liu-shaojun/test-repo/actions/workflows/test.yml/runs
-          echo 123
-          cat workspaces.json 
+          cat workspaces.json | jq '.workflow_runs[]'
         
 
