--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -64,8 +64,8 @@ jobs:
           curl -o workspaces.json \
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
-          https://api.github.com/repos/liu-shaojun/test-repo/actions/workflows/test.yml/runs
-          run_id=`cat workspaces.json | jq '.workflow_runs[]'`
+          https://api.github.com/repos/intel-analytics/BigDL/actions/workflows/mac-nightly-test.yml/runs
+          run_id=`cat workspaces.json | jq --arg today $(date -u -d yesterday +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
           echo $run_id
         
 
