--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -64,7 +64,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
           https://api.github.com/repos/intel-analytics/BigDL/actions/workflows/nightly_test.yml/runs
-          run_id=`cat workspaces.json | jq --arg today $(date -u -d yesterday +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+          run_id=`cat workspaces.json | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
           echo $run_id
           echo "RUN_ID=$run_id" >> $GITHUB_ENV
           rm -f workspaces.json
@@ -86,7 +86,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
           https://api.github.com/repos/intel-analytics/BigDL/actions/workflows/mac_nightly_test.yml/runs
-          run_id=`cat workspaces.json | jq --arg today $(date -u -d yesterday +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+          run_id=`cat workspaces.json | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
           echo $run_id
           echo "RUN_ID=$run_id" >> $GITHUB_ENV
           rm -f workspaces.json
@@ -108,7 +108,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
           https://api.github.com/repos/intel-analytics/BigDL/actions/workflows/nano-nightly-test.yml/runs
-          run_id=`cat workspaces.json | jq --arg today $(date -u -d yesterday +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
+          run_id=`cat workspaces.json | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
           echo $run_id
           echo "RUN_ID=$run_id" >> $GITHUB_ENV
           rm -f workspaces.json
