--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -64,7 +64,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.ACTIONS_PAT }}" \
           https://api.github.com/repos/intel-analytics/BigDL/actions/workflows/nightly_test.yml/runs
-          cat workspaces.json | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[]'
+          cat workspaces.json
           run_id=`cat workspaces.json | jq --arg today $(date -u +%Y-%m-%d) '.workflow_runs[] | if .event == "schedule" and .status == "completed" and .created_at[:10] == $today then .id else null end | values'`
           echo $run_id
           echo "RUN_ID=$run_id" >> $GITHUB_ENV
