--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ env:
 
 on:
   schedule:
-    - cron: '53 * * * *' # GMT time, 15:30 GMT == 23:30 China
+    - cron: '*/5 * * * *' # GMT time, 15:30 GMT == 23:30 China
 
 
 permissions:
