--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,10 @@ env:
   Branch: master
 
 on:
+  pull_request:
 
-  schedule:
-    - cron: '*/6 * * * *'  # GMT time, 15:30 GMT == 23:30 China
+#   schedule:
+#     - cron: '*/6 * * * *'  # GMT time, 15:30 GMT == 23:30 China
 
 
 permissions:
