--- a/test.yml
+++ b/test.yml
@@ -1,1 +1,72 @@
-test
+kernel:
+  image: intelanalytics/linuxkit-kernel-5.1.0-tdx:2.4.0-SNAPSHOT
+  cmdline: "root=/dev/sda1 console=hvc0 console=ttyS0 vring_force_dma_api"
+init:
+  - linuxkit/init:144c9cee8aed9e30a16940f2bf1d3813883aceda
+  - linuxkit/runc:436357ce16dd663e24f595bcec26d5ae476c998e
+  - linuxkit/containerd:d445de33c7f08470187b068d247b1c0dea240f0a
+  - linuxkit/ca-certificates:4de36e93dc87f7ccebd20db616ed10d381911d32
+onboot:
+  - name: sysctl
+    image: linuxkit/sysctl:a88a50c104d538b58da5e1441f6f0b4b738f76a6
+  - name: dhcpcd
+    image: linuxkit/dhcpcd:2a8ed08fea442909ba10f950d458191ed3647115
+    command: ["/sbin/dhcpcd", "--nobackground", "-f", "/dhcpcd.conf", "-1"]
+  - name: format
+    image: linuxkit/format:5161fe240e5824da04d51bcf5e00afcb0c18dc25
+    command: ["/usr/bin/format", "-type", "ext4", "-label", "DATA", "-verbose", "/dev/nvme1n1"]
+  - name: mount
+    image: linuxkit/mount:f671cb94a8999a65e33b3fe79f3def58e3d58b07
+    command: ["/usr/bin/mountie", "/dev/nvme1n1", "/var/secure_storage"]
+  - name: bbox
+    image: busybox
+    command: ["sh", "-c", "echo 'secret things' > /var/secure_storage/secrets"]
+    binds:
+      - /var:/var
+services:
+  - name: getty
+    image: linuxkit/getty:06f34bce0facea79161566d67345c3ea49965437
+    env:
+     - INSECURE=true
+    binds.add:
+      # this will keep all of the existing ones as well
+      - /:/var/tmp/root
+  - name: rngd
+    image: linuxkit/rngd:310c16ec5315bd07d4b8f5332cfa7dc5cbc7d368
+  - name: sshd
+    image: linuxkit/sshd:62036c2a279715d05e8298b9269a0659964f2619
+    binds.add:
+      - /root/.ssh:/root/.ssh
+  - name: llm-image
+    image: intelanalytics/bigdl-ppml-trusted-bigdl-llm-tdx:debug
+    capabilities:
+     - all
+    env:
+     - ATTESTATION=true
+     - ATTESTATION_URL=xx.xx.xx.xx:xxxx
+     - APP_ID=xxxxxxxxxxxxxxxxxx
+     - API_KEY=xxxxxxxxxxxxxxxxxx
+     - KMS_URL=xx.xx.xx.xx:xxxx
+     - KMS_USER=bigdl
+     - KMS_TOKEN=bigdl
+     - KMS_PRIMARY_KEY=llm-demo
+     - KMS_DATA_KEY=model-key
+     - BASE64_MODEL_IV=xxxxxxxxxxxxxx
+    devices:
+     - path: "/dev/tdx_guest"
+       type: c
+       major: 10
+       minor: 126
+       mode: "0660"
+    binds.add:
+      - /dev:/dev
+      - /etc/resolv.conf:/etc/resolv.conf
+files:
+  - path: root/.ssh/authorized_keys
+    source: ~/.ssh/id_rsa.pub
+    mode: "0600"
+    optional: true
+  - path: etc/dm-crypt/key
+    # the below key is just to keep the example self-contained
+    # !!! provide a proper key for production use here !!!
+    contents: "abcdefghijklmnopqrstuvwxyz123456"
