--- a/.github/workflows/retry_perf.yml
+++ b/.github/workflows/retry_perf.yml
@@ -2,7 +2,7 @@ name: Rerun failed workflows
 on:
   workflow_dispatch:
   schedule: 
-    - cron: "30 13 * * *" # GMT time, 13:30 GMT == 21:30 China
+    - cron: '3 21 * * *' # GMT time, 21:03 GMT == 06:03 China
   push:
     branches:
       - main
