--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -10,6 +10,10 @@ jobs:
   download:
     runs-on: ubuntu-latest
 
+    env:
+      SOURCEFORGE_PW: ${{ secrets.SOURCEFORGE_PW }}
+      WHL_VERSION: "2.5.0b20240603"  # 将版本号存储在环境变量中
+
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -61,3 +65,10 @@ jobs:
         ls
         pwd
 
+    - name: Upload Wheels to SourceForge
+      run: |
+        pwd
+        ls
+        sshpass -p "${{ env.SOURCEFORGE_PW }}" rsync -avz \
+        --progress \
+        wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}/
