--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -67,6 +67,7 @@ jobs:
 
     - name: Upload Wheels to SourceForge
       run: |
+        cd wheels
         pwd
         ls
         sshpass -p "${{ env.SOURCEFORGE_PW }}" rsync -avz \
