--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -72,4 +72,5 @@ jobs:
         ls
         sshpass -p "${{ env.SOURCEFORGE_PW }}" rsync -avz \
         --progress \
+        -e "ssh -o StrictHostKeyChecking=no" \
         wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}/
