--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -69,6 +69,6 @@ jobs:
       run: |
         pwd
         ls
-        sshpass -p "${{ secrets.SOURCEFORGE_PW }}" scp -o StrictHostKeyChecking=no -r \
+        sshpass -p "${{ secrets.SOURCEFORGE_PW }}" scp -vvv -o StrictHostKeyChecking=no -r \
         -P 22 \
         wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}
