--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -69,5 +69,7 @@ jobs:
       run: |
         pwd
         ls
-        sshpass -p '${{ secrets.SOURCEFORGE_PW }}' scp -vvv -o StrictHostKeyChecking=no -r \
-        wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}
+        sshpass -p '${{ secrets.SOURCEFORGE_PW }}' rsync -avz \
+        --progress \
+        -e "ssh -o StrictHostKeyChecking=no" \
+        wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}/
