--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -71,5 +71,5 @@ jobs:
         ls
         sshpass -p '${{ secrets.SOURCEFORGE_PW }}' rsync -avz \
         --progress \
-        -e "ssh -o StrictHostKeyChecking=no" \
+        -e "ssh -vvv -o StrictHostKeyChecking=no" \
         wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}/
