--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   download:
-    runs-on: ubuntu-latest
+    runs-on: [arc12]
 
     env:
       SOURCEFORGE_PW: ${{ secrets.SOURCEFORGE_PW }}
