--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Fetch wheel links
       run: |
         # rm -rf wheels
-        mkdir wheels
+        mkdir -p wheels
         cd wheels
         pwd
         python <<EOF
