--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   download:
-    runs-on: [arc12]
-    #runs-on: ubuntu-latest
+    # runs-on: [arc12]
+    runs-on: ubuntu-latest
 
     env:
       SOURCEFORGE_PW: '${{ secrets.SOURCEFORGE_PW }}'
@@ -28,7 +28,7 @@ jobs:
 
     - name: Fetch wheel links
       run: |
-        # rm -rf wheels
+        rm -rf wheels
         mkdir -p wheels
         cd wheels
         pwd
@@ -59,13 +59,13 @@ jobs:
         pwd
       
 
-    # - name: Download wheel files
-    #   run: |
-    #     cd wheels
-    #     pwd
-    #     wget --no-check-certificate -i wheel_links.txt
-    #     ls
-    #     pwd
+    - name: Download wheel files
+      run: |
+        cd wheels
+        pwd
+        wget --no-check-certificate -i wheel_links.txt
+        ls
+        pwd
 
     # - name: copy file via ssh password
     #   uses: appleboy/scp-action@v0.1.7
@@ -81,5 +81,5 @@ jobs:
         pwd
         ls
         rsync -avzr -v \
-        -e "sshpass -p '1234qwer\!@\#\$QWER' ssh -vvv -o StrictHostKeyChecking=no -o ProxyCommand='connect-proxy -S child-prc.intel.com:1080 %h %p'" \
+        -e "sshpass -p '1234qwer\!@\#\$QWER' ssh -vvv -o StrictHostKeyChecking=no " \
         wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}/
